<resources>
    <string name="app_name">TNoteApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_text">Welcome to \nTNote</string>
    <string name="loginCaps">LOGIN</string>
    <string name="back">Back</string>
    <string name="email_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="registerCaps">REGISTER</string>
    <string name="name_hint">Full Name</string>
    <string name="username">Username:</string>
    <string name="account_created_at">Account created at:</string>
    <string name="e_mail">E-mail:</string>
    <string name="log_out">Log out</string>
    <string name="day">Day:</string>

    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>